--- a/src/app/curso-python/curso-python.component.html
+++ b/src/app/curso-python/curso-python.component.html
@@ -136,11 +136,28 @@
         <mat-card>
             <div class="d-flex justify-content-center align-items-center">
             <button class="goback-button">
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSejjpuBKMdk6S4I1_IGi6TkIMdD1A41Y1axRAiyFj_Fj4tApQ/closedform"> 
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSejjpuBKMdk6S4I1_IGi6TkIMdD1A41Y1axRAiyFj_Fj4tApQ/closedform">
                     {{ 'PYTHONCOURSES.ENROLLBUTTON' | translate }} </a>
             </button>
         </div>
         </mat-card>
+    </div>
+
+    <div class="faq-section">
+        <h1 class="section-title">{{ 'PYTHONCOURSES.FAQ.TITLE' | translate}}</h1>
+        <mat-accordion class="faq-accordion">
+
+            <mat-expansion-panel class="mat-elevation-z0" *ngFor="let qa of faq">
+                <mat-expansion-panel-header [collapsedHeight]="'max-content'" [expandedHeight]="'max-content'">
+                    <mat-panel-title class="faq-question">
+                        {{ qa.q | translate}}
+                    </mat-panel-title>
+                </mat-expansion-panel-header>
+
+                <p class="faq-answer">{{ qa.a | translate}}</p>
+            </mat-expansion-panel>
+
+        </mat-accordion>
     </div>
 
     <!-- Sponsors Actuales -->
