--- a/src/app/curso-python/curso-python.component.html
+++ b/src/app/curso-python/curso-python.component.html
@@ -21,6 +21,15 @@
             </div>
         </div>
     </div>
+
+    <div>
+        <div class="d-flex flex-row-reverse">
+            <button class="goback-button">
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSejjpuBKMdk6S4I1_IGi6TkIMdD1A41Y1axRAiyFj_Fj4tApQ/closedform" class="button-text">
+                    {{ 'PYTHONCOURSES.ENROLLBUTTON' | translate }} </a>
+            </button>
+        </div>
+    </div>
     <!-- Introductory text -->
     <div>
         <h2 class="course-subtitle">{{ 'PYTHONCOURSES.DESC_TITLE' | translate }}</h2>
@@ -132,16 +141,7 @@
     </div>
 -->
 
-    <div>
-        <mat-card class="no-shadow">
-            <div class="d-flex justify-content-center align-items-center">
-            <button class="goback-button">
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSejjpuBKMdk6S4I1_IGi6TkIMdD1A41Y1axRAiyFj_Fj4tApQ/closedform" class="button-text">
-                    {{ 'PYTHONCOURSES.ENROLLBUTTON' | translate }} </a>
-            </button>
-        </div>
-        </mat-card>
-    </div>
+    
 
     <div class="faq-section">
         <h2 class="course-subtitle">{{ 'PYTHONCOURSES.FAQ.TITLE' | translate}}</h2>
@@ -149,7 +149,7 @@
 
             <mat-expansion-panel class="mat-elevation-z0" *ngFor="let qa of faq">
                 <mat-expansion-panel-header [collapsedHeight]="'max-content'" [expandedHeight]="'max-content'">
-                    <mat-panel-title class="faq-question">
+                    <mat-panel-title class="faq-question mt-1 mb-1">
                         {{ qa.q | translate}}
                     </mat-panel-title>
                 </mat-expansion-panel-header>
