--- a/src/app/ieeextreme/ieeextreme.component.html
+++ b/src/app/ieeextreme/ieeextreme.component.html
@@ -18,7 +18,7 @@
         <div class="container" id="facts">
             <div class="row">
               <div class="col-sm">
-                  <h1>10</h1>
+                  <h1>11</h1>
                   <h3 class="facts">{{ 'IEEEXTREME.FACTS.EDITIONS' | translate }}</h3>
               </div>
               <div class="dottedlineright"></div>
@@ -76,12 +76,7 @@
       <p>{{ 'IEEEXTREME.SPONSORSHIP.TEXT' | translate }}</p>
         <div class="container">
             <div class="row">
-              <div class="col-sm">
-                <div class="sponsorContact">
-                  <h3>Ariel Nowik</h3>
-                  <a href="mailto:anowik@itba.edu.ar" class="whiteLink">anowik@itba.edu.ar</a>
-                </div>
-              </div>
+              
               <div class="col-sm">
                 <div class="sponsorContact">
                   <h3>Ricardo Lin</h3>
@@ -98,39 +93,34 @@
         </div>
     </div>
 
-    <!-- Prev Sponsors -->
+    <!-- Sponsors -->
     <div class="sponsor">
       <h1 class="right">{{ 'IEEEXTREME.SPONSORSHIP.TITLE' | translate }}</h1>
-      <div class="container">
-        <div class="row" style="margin-top: 2vmin;">
-          <div class="col-sm">
-            <img src="./../../assets/image/content/avature.png" height="50vmin" alt="Logo Avature" style="position: relative; top: 50%; transform: translateY(-50%);">
-          </div>
-          <div class="col-sm">
-            <img src="./../../assets/image/content/eiwa.png" height="65vmin" alt="Logo Eiwa" style="position: relative; top: 50%; transform: translateY(-50%);">
-          </div>
-          <div class="col-sm">
-            <img src="./../../assets/image/content/flowics.png" height="30vmin" alt="Logo Flowics" style="position: relative; top: 50%; transform: translateY(-50%);">
-          </div>
-          <div class="col-sm">
-            <img src="./../../assets/image/content/inclusion.png" height="40vmin" alt="Logo Inclusion" style="position: relative; top: 50%; transform: translateY(-50%);">
-          </div>
-        </div>
-        <div class="row" style="margin-top: 2vmin;">
-          <div class="col-sm">
-            <img src="./../../assets/image/content/mulesoft.png" height="50vmin" alt="Logo Mulesoft" style="position: relative; top: 50%; transform: translateY(-50%);">
-          </div>
-          <div class="col-sm">
-            <img src="./../../assets/image/content/pampa.png" height="40vmin" alt="Logo Pampa" style="position: relative; top: 50%; transform: translateY(-50%);">
-          </div>
-          <div class="col-sm">
-            <img src="./../../assets/image/content/tgs.png" height="65vmin" alt="Logo TGS" style="position: relative; top: 50%; transform: translateY(-50%);">
-          </div>
-          <div class="col-sm">
-            <img src="./../../assets/image/content/unify.png" height="30vmin" alt="Logo Unify" style="position: relative; top: 50%; transform: translateY(-50%);">
+      <div class="row">
+        <h1 class="section-title">Sponsors</h1>
+  
+        <br>
+  
+        <div class="container">
+          <div class="row">
+              <div class="col-sm sponsors">
+                  <img src="assets/image/content/innovid.png" height="35vmin" alt="Logo Innovid"
+                      style="position: relative; top: 50%; transform: translateY(-50%);">
+              </div>
+              <div class="col-sm sponsors">
+                  <img src="assets/image/content/jpmorgan.png" height="80vmin" alt="Logo JP Morgan"
+                      style="position: relative; top: 50%; transform: translateY(-50%);">
+              </div>
+              <div class="col-sm sponsors">
+                <img src="./../../assets/image/content/eiwa.png" height="80vmin" alt="Logo Eiwa"
+                  style="position: relative; top: 50%; transform: translateY(-50%);">
+              </div>
           </div>
         </div>
+  
+  
       </div>
+
     </div>
 
 </body>
