flowics added in sponsors and python-course

--- a/src/app/curso-python/curso-python.component.html
+++ b/src/app/curso-python/curso-python.component.html
@@ -178,7 +178,11 @@
                     style="position: relative; top: 50%; transform: translateY(-50%);">
             </div>
             <div class="col-sm sponsors">
-              <img src="./../../assets/image/content/eiwa.png" height="80vmin" alt="Logo Eiwa"
+                <img src="assets/image/content/flowics_logo-horizontal-full-color.png" height="80vmin" alt="Logo flowics"
+                    style="position: relative; top: 50%; transform: translateY(-50%);">
+            </div>
+            <div class="col-sm sponsors">
+              <img src="./../../assets/image/content/eiwa.png" height="70vmin" alt="Logo Eiwa"
                 style="position: relative; top: 50%; transform: translateY(-50%);">
             </div>
         </div>
