--- a/src/app/sponsors/sponsors.component.html
+++ b/src/app/sponsors/sponsors.component.html
@@ -27,6 +27,18 @@
       </div>
 
     <mat-tab-group class="mt-5 group-margin">
+        <mat-tab label="2021">
+            <div class="bottomLine">
+                <div class="container">
+                    <div class="row" style="margin-top: 2vmin;">
+                        <div class="col-sm">
+                            <img src="./../../assets/image/content/flowics_logo-horizontal-full-color.png" height="70vmin" alt="Logo flowics"
+                                style="position: relative; top: 50%; transform: translateY(-50%); ">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </mat-tab>
         <mat-tab label="2020">
             <div class="bottomLine">
                 <div class="container">
