--- a/src/app/sponsors/sponsors.component.html
+++ b/src/app/sponsors/sponsors.component.html
@@ -28,20 +28,26 @@
 
     <mat-tab-group class="mt-5 group-margin">
         <mat-tab label="2021">
-            <mat-tab-group class="padding">
-                <mat-tab label="Gold">
-                    <div class="bottomLine">
-                        <div class="container">
-                            <div class="row" style="margin-top: 2vmin;">
-                                <div class="col-sm">
-                                    <img src="./../../assets/image/content/flowics_logo-horizontal-full-color.png" height="70vmin" alt="Logo flowics"
-                                        style="position: relative; top: 50%; transform: translateY(-50%); ">
-                                </div>
-                            </div>
+            <div class="bottomLine">
+                <div class="container">
+                    <p class="center top_margin subtitle">Platinium</p>
+                    <hr style="height: 0.15em;border-width:0;color:gray;background-color:lightgray">
+                    <div class="row" style="margin-top: 2vmin;">
+                        <div class="col-sm">
+                            <img src="./../../assets/image/content/jpmorgan.png" height="90vmin" alt="Logo jpmorgan"
+                                style="position: relative; top: 50%; transform: translateY(-50%);">
                         </div>
                     </div>
-                </mat-tab>
-            </mat-tab-group>
+                    <p class="center subtitle">Gold</p>
+                    <hr style="height: 0.15em;border-width:0;color:gray;background-color:lightgray">
+                    <div class="row" style="margin-top: 2vmin;">
+                        <div class="col-sm">
+                            <img src="./../../assets/image/content/flowics_logo-horizontal-full-color.png" height="70vmin" alt="Logo flowics"
+                                style="position: relative; top: 50%; transform: translateY(-50%); ">
+                        </div>
+                    </div>
+                </div>
+            </div>
         </mat-tab>
         <mat-tab label="2020">
             <div class="bottomLine">
