--- a/src/app/ieeextreme/ieeextreme.component.html
+++ b/src/app/ieeextreme/ieeextreme.component.html
@@ -72,7 +72,7 @@
 
     <!-- Sponsor 2020 -->
     <div class="noLine" id="sponsorship">
-      <h1>Sponsorship 2020</h1>
+      <h1>Sponsorship 2021</h1>
       <p>{{ 'IEEEXTREME.SPONSORSHIP.TEXT' | translate }}</p>
         <div class="container">
             <div class="row">
@@ -97,7 +97,7 @@
     <div class="sponsor">
       <h1 class="right">{{ 'IEEEXTREME.SPONSORSHIP.TITLE' | translate }}</h1>
       <div class="row">
-        <h1 class="section-title">Sponsors</h1>
+        <h1 class="section-title">Sponsors 2020</h1>
   
         <br>
   
