--- a/src/app/curso-python/curso-python.component.html
+++ b/src/app/curso-python/curso-python.component.html
@@ -25,7 +25,7 @@
     <div>
         <div class="d-flex flex-row-reverse">
             <button class="goback-button">
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSejjpuBKMdk6S4I1_IGi6TkIMdD1A41Y1axRAiyFj_Fj4tApQ/closedform" class="button-text">
+                <a href="https://bit.ly/IntroaProgramacionIEEE" class="button-text">
                     {{ 'PYTHONCOURSES.ENROLLBUTTON' | translate }} </a>
             </button>
         </div>
@@ -50,7 +50,7 @@
                     <!--<a
                         href="https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Clase_1_Curso_Python.ipynb#scrollTo=4FLV1yxDh9Rh">-->{{
                     'PYTHONCOURSES.CLASSES.TITLE' | translate }}
-                    1 - 03/05
+                    1 <!--- 03/05-->
                     <!--</a>-->
                 </mat-card-title>
                 <!-- <mat-card-subtitle>{{ 'PYTHONCOURSES.CLASSES.DATE1' | translate }}</mat-card-subtitle> -->
@@ -68,7 +68,7 @@
                     <!--<a
                         href="https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Clase_2_Curso_Python.ipynb">-->{{
                     'PYTHONCOURSES.CLASSES.TITLE' | translate }}
-                    2 - 10/05
+                    2 <!---- 10/05-->
                     <!--</a>-->
                 </mat-card-title>
                 <!-- <mat-card-subtitle>{{ 'PYTHONCOURSES.CLASSES.DATE2' | translate }}</mat-card-subtitle> -->
@@ -86,7 +86,7 @@
                     <!--<a
                         href="https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Clase_3_Curso_Python.ipynb">-->{{
                     'PYTHONCOURSES.CLASSES.TITLE' | translate }}
-                    3 - 17/05
+                    3 <!--- 17/05-->
                     <!--</a>-->
                 </mat-card-title>
                 <!-- <mat-card-subtitle>{{ 'PYTHONCOURSES.CLASSES.DATE3' | translate }}</mat-card-subtitle> -->
