--- a/src/app/ieeextreme/ieeextreme.component.html
+++ b/src/app/ieeextreme/ieeextreme.component.html
@@ -85,8 +85,8 @@
               </div>
               <div class="col-sm">
                 <div class="sponsorContact">
-                  <h3>Olivia De Vincenti</h3>
-                  <a href="mailto:odevincenti@itba.edu.ar" class="whiteLink">odevincenti@itba.edu.ar</a>
+                  <h3>Nicolas Bustelo</h3>
+                  <a href="mailto:nbustelo@itba.edu.ar" class="whiteLink">nbustelo@itba.edu.ar</a>
                 </div>
               </div>
             </div>
