REFACTOR: moved pages to modules and some components to core

--- a/src/app/modules/ieeextreme/ieeextreme.component.html
+++ b/src/app/modules/ieeextreme/ieeextreme.component.html
@@ -14,7 +14,7 @@
 
     <!-- Inicio and facts -->
     <div class="bottomLine" id="home">
-        <img src="./../../assets/image/XtremeLogo.png" class="extremeLogo" alt="Logo ITBA-IEEE">
+        <img src="../../../assets/image/XtremeLogo.png" class="extremeLogo" alt="Logo ITBA-IEEE">
         <div class="container" id="facts">
             <div class="row">
               <div class="col-sm">
@@ -49,7 +49,7 @@
                 <div class="transparent">{{ 'IEEEXTREME.TEAM.TEXT' | translate }}</div>
               </div>
               <div class="col-sm">
-                <img src="./../../assets/image/teamdisc_black.png" height="200vmin" alt="Logo ITBA-IEEE">
+                <img src="../../../assets/image/teamdisc_black.png" height="200vmin" alt="Logo ITBA-IEEE">
               </div>
             </div>
         </div>
@@ -60,7 +60,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm">
-                    <img src="./../../assets/image/tournament_black.png" height="200vmin" alt="Logo ITBA-IEEE">
+                    <img src="../../../assets/image/tournament_black.png" height="200vmin" alt="Logo ITBA-IEEE">
                 </div>
               <div class="col-sm">
                 <h2>{{ 'IEEEXTREME.PARTICIPATE.TITLE' | translate }}</h2>
@@ -76,7 +76,7 @@
       <p>{{ 'IEEEXTREME.SPONSORSHIP.TEXT' | translate }}</p>
         <div class="container">
             <div class="row">
-              
+
               <div class="col-sm">
                 <div class="sponsorContact">
                   <h3>Ricardo Lin</h3>
@@ -98,27 +98,27 @@
       <h1 class="right">{{ 'IEEEXTREME.SPONSORSHIP.TITLE' | translate }}</h1>
       <div class="row">
         <h1 class="section-title">Sponsors 2020</h1>
-  
+
         <br>
-  
+
         <div class="container">
           <div class="row">
               <div class="col-sm sponsors">
-                  <img src="assets/image/content/innovid.png" height="35vmin" alt="Logo Innovid"
-                      style="position: relative; top: 50%; transform: translateY(-50%);">
+                  <img src="../../../assets/image/content/innovid.png" height="35vmin" alt="Logo Innovid"
+                       style="position: relative; top: 50%; transform: translateY(-50%);">
               </div>
               <div class="col-sm sponsors">
-                  <img src="assets/image/content/jpmorgan.png" height="80vmin" alt="Logo JP Morgan"
-                      style="position: relative; top: 50%; transform: translateY(-50%);">
+                  <img src="../../../assets/image/content/jpmorgan.png" height="80vmin" alt="Logo JP Morgan"
+                       style="position: relative; top: 50%; transform: translateY(-50%);">
               </div>
               <div class="col-sm sponsors">
-                <img src="./../../assets/image/content/eiwa.png" height="80vmin" alt="Logo Eiwa"
-                  style="position: relative; top: 50%; transform: translateY(-50%);">
+                <img src="../../../assets/image/content/eiwa.png" height="80vmin" alt="Logo Eiwa"
+                     style="position: relative; top: 50%; transform: translateY(-50%);">
               </div>
           </div>
         </div>
-  
-  
+
+
       </div>
 
     </div>
