--- a/src/app/modules/team/team.component.html
+++ b/src/app/modules/team/team.component.html
@@ -18,7 +18,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-5 col-sm-12 pt-1 pb-1 flexImage" >
-                  <img src="../../assets/image/IEEETeams.png" alt="Team" class="IEEETeamImage">
+                  <img src="../../../assets/image/IEEETeams.png" alt="Team" class="IEEETeamImage">
                 </div>
                 <div class="col-md-7 col-sm-12 pt-1 pb-1 flexText" >
                   <h1 class="page-title">{{ 'NAVBAR.TEAM' | translate }}</h1>
