--- a/src/app/modules/curso-python/curso-python.component.html
+++ b/src/app/modules/curso-python/curso-python.component.html
@@ -141,7 +141,7 @@
     </div>
 -->
 
-    
+
 
     <div class="faq-section">
         <h2 class="course-subtitle">{{ 'PYTHONCOURSES.FAQ.TITLE' | translate}}</h2>
@@ -170,12 +170,12 @@
       <div class="container">
         <div class="row">
             <div class="col-sm sponsors">
-                <img src="assets/image/content/jpmorgan.png" height="80vmin" alt="Logo JP Morgan"
-                    style="position: relative; top: 50%; transform: translateY(-50%);">
+                <img src="../../../assets/image/content/jpmorgan.png" height="80vmin" alt="Logo JP Morgan"
+                     style="position: relative; top: 50%; transform: translateY(-50%);">
             </div>
             <div class="col-sm sponsors">
-                <img src="assets/image/content/flowics_logo-horizontal-full-color.png" height="80vmin" alt="Logo flowics"
-                    style="position: relative; top: 50%; transform: translateY(-50%);">
+                <img src="../../../assets/image/content/flowics_logo-horizontal-full-color.png" height="80vmin" alt="Logo flowics"
+                     style="position: relative; top: 50%; transform: translateY(-50%);">
             </div>
         </div>
       </div>
