--- a/src/app/modules/events/events.component.html
+++ b/src/app/modules/events/events.component.html
@@ -13,12 +13,12 @@
 </header>
 
 <body>
-  
+
   <div class="topbottomLine pt-2 pb-2 mb-4" id="home">
     <div class="container">
         <div class="row">
             <div class="col-md-5 col-sm-12 pt-1 pb-1 flexImage" >
-              <img src="../../assets/image/IEEEEventos2.png" alt="Events" class="IEEEEventsImage">
+              <img src="../../../assets/image/IEEEEventos2.png" alt="Events" class="IEEEEventsImage">
             </div>
             <div class="col-md-7 col-sm-12 pt-1 pb-1 flexText" >
               <h1 class="page-title">{{ 'NAVBAR.EVENTS' | translate }}</h1>
