--- a/src/app/modules/mainpage/mainpage.component.html
+++ b/src/app/modules/mainpage/mainpage.component.html
@@ -10,7 +10,7 @@
 <header>
   <app-navbar></app-navbar>
   <div class="banner">
-    <img src="assets/image/banner6.jpg" alt="IEEE ITBA" class="max-width">
+    <img src="../../../assets/image/banner6.jpg" alt="IEEE ITBA" class="max-width">
     <div class="main-title">ITBA IEEE</div>
     <div class="subtitle">Student Branch</div>
   </div>
@@ -29,7 +29,7 @@
         <div class="row news-header">
           <div class="col news-logo">
             <a class="link-text" [routerLink]="['/noticias']">
-              <img src="assets/image/IEEENews_sin_fondo.png" class="news-logo">
+              <img src="../../../assets/image/IEEENews_sin_fondo.png" class="news-logo">
               <h3 class="news-container-title">{{ 'HOME.IEEENEWS.TITLE' | translate }}</h3>
             </a>
           </div>
@@ -233,12 +233,12 @@
       <div class="container">
         <div class="row">
             <div class="col-sm sponsors">
-                <img src="assets/image/content/jpmorgan.png" height="70vmin" alt="Logo JP Morgan"
-                    style="position: relative; top: 50%; transform: translateY(-50%);">
+                <img src="../../../assets/image/content/jpmorgan.png" height="70vmin" alt="Logo JP Morgan"
+                     style="position: relative; top: 50%; transform: translateY(-50%);">
             </div>
             <div class="col-sm sponsors">
-              <img src="assets/image/content/flowics_logo-horizontal-full-color.png" height="80vmin" alt="Logo flowics"
-                  style="position: relative; top: 50%; transform: translateY(-50%);">
+              <img src="../../../assets/image/content/flowics_logo-horizontal-full-color.png" height="80vmin" alt="Logo flowics"
+                   style="position: relative; top: 50%; transform: translateY(-50%);">
             </div>
         </div>
       </div>
