--- a/src/app/modules/noticias/noticias.component.html
+++ b/src/app/modules/noticias/noticias.component.html
@@ -11,14 +11,14 @@
 </header>
 
 <body>
-    
+
     <div class="body" fxLayoutAlign="center center" fxLayout="column">
 
         <div class="topbottomLine pt-2 pb-2 mb-4" id="home">
             <div class="container">
                 <div class="row">
                     <div class="col-md-5 col-sm-12 pt-1 pb-1 flexImage" >
-                      <img src="../../assets/image/IEEENews_sin_fondo.png" alt="News" class="IEEENoticiasImage">
+                      <img src="../../../assets/image/IEEENews_sin_fondo.png" alt="News" class="IEEENoticiasImage">
                     </div>
                     <div class="col-md-7 col-sm-12 pt-1 pb-1 flexText" >
                       <h1 class="page-title">{{ 'NAVBAR.NEWS' | translate }}</h1>
