--- a/src/app/loading-spinner/loading-spinner.component.html
+++ b/src/app/loading-spinner/loading-spinner.component.html
@@ -1,1 +1,1 @@
-<div class="lds-roller"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
+<div class="lds-roller"></div>
