--- a/src/app/modules/curso-python/pages/curso-python/curso-python.component.html
+++ b/src/app/modules/curso-python/pages/curso-python/curso-python.component.html
@@ -170,11 +170,11 @@
       <div class="container">
         <div class="row">
             <div class="col-sm sponsors">
-                <img src="../../../assets/image/content/jpmorgan.png" height="80vmin" alt="Logo JP Morgan"
+                <img src="../../../../../assets/image/content/jpmorgan.png" height="80vmin" alt="Logo JP Morgan"
                      style="position: relative; top: 50%; transform: translateY(-50%);">
             </div>
             <div class="col-sm sponsors">
-                <img src="../../../assets/image/content/flowics_logo-horizontal-full-color.png" height="80vmin" alt="Logo flowics"
+                <img src="../../../../../assets/image/content/flowics_logo-horizontal-full-color.png" height="80vmin" alt="Logo flowics"
                      style="position: relative; top: 50%; transform: translateY(-50%);">
             </div>
         </div>
