--- a/src/app/modules/ieeextreme/pages/ieeextreme/ieeextreme.component.html
+++ b/src/app/modules/ieeextreme/pages/ieeextreme/ieeextreme.component.html
@@ -14,7 +14,7 @@
 
     <!-- Inicio and facts -->
     <div class="bottomLine" id="home">
-        <img src="../../../assets/image/XtremeLogo.png" class="extremeLogo" alt="Logo ITBA-IEEE">
+        <img src="../../../../../assets/image/XtremeLogo.png" class="extremeLogo" alt="Logo ITBA-IEEE">
         <div class="container" id="facts">
             <div class="row">
               <div class="col-sm">
@@ -49,7 +49,7 @@
                 <div class="transparent">{{ 'IEEEXTREME.TEAM.TEXT' | translate }}</div>
               </div>
               <div class="col-sm">
-                <img src="../../../assets/image/teamdisc_black.png" height="200vmin" alt="Logo ITBA-IEEE">
+                <img src="../../../../../assets/image/teamdisc_black.png" height="200vmin" alt="Logo ITBA-IEEE">
               </div>
             </div>
         </div>
@@ -60,7 +60,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm">
-                    <img src="../../../assets/image/tournament_black.png" height="200vmin" alt="Logo ITBA-IEEE">
+                    <img src="../../../../../assets/image/tournament_black.png" height="200vmin" alt="Logo ITBA-IEEE">
                 </div>
               <div class="col-sm">
                 <h2>{{ 'IEEEXTREME.PARTICIPATE.TITLE' | translate }}</h2>
@@ -104,15 +104,15 @@
         <div class="container">
           <div class="row">
               <div class="col-sm sponsors">
-                  <img src="../../../assets/image/content/innovid.png" height="35vmin" alt="Logo Innovid"
+                  <img src="../../../../../assets/image/content/innovid.png" height="35vmin" alt="Logo Innovid"
                        style="position: relative; top: 50%; transform: translateY(-50%);">
               </div>
               <div class="col-sm sponsors">
-                  <img src="../../../assets/image/content/jpmorgan.png" height="80vmin" alt="Logo JP Morgan"
+                  <img src="../../../../../assets/image/content/jpmorgan.png" height="80vmin" alt="Logo JP Morgan"
                        style="position: relative; top: 50%; transform: translateY(-50%);">
               </div>
               <div class="col-sm sponsors">
-                <img src="../../../assets/image/content/eiwa.png" height="80vmin" alt="Logo Eiwa"
+                <img src="../../../../../assets/image/content/eiwa.png" height="80vmin" alt="Logo Eiwa"
                      style="position: relative; top: 50%; transform: translateY(-50%);">
               </div>
           </div>
