REFACTOR: created modules for other main pages and their core components

--- a/src/app/modules/events/pages/events/events.component.html
+++ b/src/app/modules/events/pages/events/events.component.html
@@ -18,7 +18,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-5 col-sm-12 pt-1 pb-1 flexImage" >
-              <img src="../../../assets/image/IEEEEventos2.png" alt="Events" class="IEEEEventsImage">
+              <img src="../../../../../assets/image/IEEEEventos2.png" alt="Events" class="IEEEEventsImage">
             </div>
             <div class="col-md-7 col-sm-12 pt-1 pb-1 flexText" >
               <h1 class="page-title">{{ 'NAVBAR.EVENTS' | translate }}</h1>
