--- a/src/app/modules/noticias/pages/noticias/noticias.component.html
+++ b/src/app/modules/noticias/pages/noticias/noticias.component.html
@@ -18,7 +18,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-5 col-sm-12 pt-1 pb-1 flexImage" >
-                      <img src="../../../assets/image/IEEENews_sin_fondo.png" alt="News" class="IEEENoticiasImage">
+                      <img src="../../../../../assets/image/IEEENews_sin_fondo.png" alt="News" class="IEEENoticiasImage">
                     </div>
                     <div class="col-md-7 col-sm-12 pt-1 pb-1 flexText" >
                       <h1 class="page-title">{{ 'NAVBAR.NEWS' | translate }}</h1>
