--- a/src/app/modules/sponsors/pages/sponsors/sponsors.component.html
+++ b/src/app/modules/sponsors/pages/sponsors/sponsors.component.html
@@ -17,7 +17,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-5 col-sm-12 pt-1 pb-1 flexImage" >
-                  <img src="../../../assets/image/IEEESponsors.png" alt="Sponsors" class="IEEESponsorsImage">
+                  <img src="../../../../../assets/image/IEEESponsors.png" alt="Sponsors" class="IEEESponsorsImage">
                 </div>
                 <div class="col-md-7 col-sm-12 pt-1 pb-1 flexText" >
                   <h1 class="page-title">{{ 'NAVBAR.SPONSORS' | translate }}</h1>
@@ -32,11 +32,11 @@
                 <div class="container">
                     <div class="row" style="margin-top: 2vmin;">
                         <div class="col-sm">
-                            <img src="../../../assets/image/content/jpmorgan.png" height="90vmin" alt="Logo jpmorgan"
+                            <img src="../../../../../assets/image/content/jpmorgan.png" height="90vmin" alt="Logo jpmorgan"
                                  style="position: relative; top: 50%; transform: translateY(-50%);">
                         </div>
                         <div class="col-sm">
-                            <img src="../../../assets/image/content/flowics_logo-horizontal-full-color.png" height="70vmin" alt="Logo flowics"
+                            <img src="../../../../../assets/image/content/flowics_logo-horizontal-full-color.png" height="70vmin" alt="Logo flowics"
                                  style="position: relative; top: 50%; transform: translateY(-50%); ">
                         </div>
                     </div>
@@ -48,15 +48,15 @@
                 <div class="container">
                     <div class="row" style="margin-top: 2vmin;">
                         <div class="col-sm">
-                            <img src="../../../assets/image/content/innovid.png" height="35vmin" alt="Logo Innovid"
+                            <img src="../../../../../assets/image/content/innovid.png" height="35vmin" alt="Logo Innovid"
                                  style="position: relative; top: 50%; transform: translateY(-50%);">
                         </div>
                         <div class="col-sm">
-                            <img src="../../../assets/image/content/jpmorgan.png" height="90vmin" alt="Logo jpmorgan"
+                            <img src="../../../../../assets/image/content/jpmorgan.png" height="90vmin" alt="Logo jpmorgan"
                                  style="position: relative; top: 50%; transform: translateY(-50%);">
                         </div>
                         <div class="col-sm">
-                            <img src="../../../assets/image/content/eiwa.png" height="85vmin" alt="Logo Eiwa"
+                            <img src="../../../../../assets/image/content/eiwa.png" height="85vmin" alt="Logo Eiwa"
                                  style="position: relative; top: 50%; transform: translateY(-50%);">
                         </div>
 
@@ -69,43 +69,43 @@
                 <div class="container">
                     <div class="row" style="margin-top: 2vmin;">
                         <div class="col-sm">
-                            <img src="../../../assets/image/content/jpmorgan.png" height="60vmin" alt="Logo Innovid"
+                            <img src="../../../../../assets/image/content/jpmorgan.png" height="60vmin" alt="Logo Innovid"
                                  style="position: relative; top: 50%; transform: translateY(-50%);">
                         </div>
                         <div class="col-sm">
-                            <img src="../../../assets/image/content/innovid.png" height="30vmin" alt="Logo Avature"
+                            <img src="../../../../../assets/image/content/innovid.png" height="30vmin" alt="Logo Avature"
                                  style="position: relative; top: 50%; transform: translateY(-50%);">
                         </div>
                         <div class="col-sm">
-                            <img src="../../../assets/image/content/eiwa.png" height="85vmin" alt="Logo Eiwa"
+                            <img src="../../../../../assets/image/content/eiwa.png" height="85vmin" alt="Logo Eiwa"
                                  style="position: relative; top: 50%; transform: translateY(-50%);">
                         </div>
                         <div class="col-sm">
-                            <img src="../../../assets/image/content/inclusion.png" height="40vmin" alt="Logo Inclusion"
+                            <img src="../../../../../assets/image/content/inclusion.png" height="40vmin" alt="Logo Inclusion"
                                  style="position: relative; top: 50%; transform: translateY(-50%);">
                         </div>
                     </div>
                     <div class="row" style="margin-top: 2vmin;">
                         <div class="col-sm">
-                            <img src="../../../assets/image/content/mulesoft.png" height="50vmin" alt="Logo Mulesoft"
+                            <img src="../../../../../assets/image/content/mulesoft.png" height="50vmin" alt="Logo Mulesoft"
                                  style="position: relative; top: 50%; transform: translateY(-50%);">
                         </div>
                         <div class="col-sm">
-                            <img src="../../../assets/image/content/flowics.png" height="45vmin" alt="Logo Flowics"
+                            <img src="../../../../../assets/image/content/flowics.png" height="45vmin" alt="Logo Flowics"
                                  style="position: relative; top: 50%; transform: translateY(-50%);">
                         </div>
                         <div class="col-sm">
-                            <img src="../../../assets/image/content/tgs.png" height="60vmin" alt="Logo TGS"
+                            <img src="../../../../../assets/image/content/tgs.png" height="60vmin" alt="Logo TGS"
                                  style="position: relative; top: 50%; transform: translateY(-50%);">
                         </div>
                         <div class="col-sm">
-                            <img src="../../../assets/image/content/pampa.png" height="50vmin" alt="Logo Pampa"
+                            <img src="../../../../../assets/image/content/pampa.png" height="50vmin" alt="Logo Pampa"
                                  style="position: relative; top: 50%; transform: translateY(-50%);">
                         </div>
                     </div>
                     <div class="row mt-4">
                         <div class="col-sm">
-                            <img src="../../../assets/image/content/unify.png" height="30vmin" alt="Logo Unify"
+                            <img src="../../../../../assets/image/content/unify.png" height="30vmin" alt="Logo Unify"
                                  style="position: relative; top: 50%; transform: translateY(-50%);">
                         </div>
                     </div>
