added P.A.E. and Axion logos to sponsors page
check with Fundraising if order of logos and sizes are ok

--- a/src/app/modules/sponsors/pages/sponsors/sponsors.component.html
+++ b/src/app/modules/sponsors/pages/sponsors/sponsors.component.html
@@ -36,7 +36,15 @@
                                  style="position: relative; top: 50%; transform: translateY(-50%);">
                         </div>
                         <div class="col-sm">
+                            <img src="../../../../../assets/image/content/axion-energy.png" height="100vmin" alt="Logo Axion Energy"
+                                 style="position: relative; top: 50%; transform: translateY(-50%);">
+                        </div>
+                        <div class="col-sm">
                             <img src="../../../../../assets/image/content/flowics_logo-horizontal-full-color.png" height="70vmin" alt="Logo flowics"
+                                 style="position: relative; top: 50%; transform: translateY(-50%); ">
+                        </div>
+                        <div class="col-sm">
+                            <img src="../../../../../assets/image/content/pan-american-energy.png" height="75vmin" alt="Logo Pan American Energy"
                                  style="position: relative; top: 50%; transform: translateY(-50%); ">
                         </div>
                     </div>
