--- a/src/app/modules/data-analysis/pages/data-analysis/data-analysis.component.html
+++ b/src/app/modules/data-analysis/pages/data-analysis/data-analysis.component.html
@@ -41,7 +41,12 @@
 
 <!-- Cards Temario -->
 
-<div class="marginTop" fxLayout="row wrap" fxLayout.lt-sm="column" fxLayoutGap="16px" fxLayoutAlign="flex-start">
+<div>
+  <h2 class="course-subtitle">{{ 'DATAANALYSIS.CONTENT_TITLE' | translate }}</h2>
+  <p>{{ 'DATAANALYSIS.CONTENT_DESC' | translate }}</p>
+</div>
+
+<div class="marginTop" fxLayout="row wrap" fxLayout.lt-sm="column" fxLayoutGap="16px" fxLayoutAlign="center">
 
   <mat-card class="example-card" fxFlex="0 1 calc(33.3% - 16px)" fxFlex.lt-md="0 1 calc(50% - 16px)"
             fxFlex.lt-sm="100%">
@@ -53,11 +58,15 @@
       </mat-card-title>
     </mat-card-header>
     <mat-card-content>
-      {{ 'DATAANALYSIS.CLASSES.C1' | translate }}
+      <mat-list>
+        <mat-list-item><mat-icon matListIcon>fiber_manual_record</mat-icon>{{ 'DATAANALYSIS.CLASSES.C1.M1' | translate }}</mat-list-item>
+        <mat-list-item><mat-icon matListIcon>fiber_manual_record</mat-icon>{{ 'DATAANALYSIS.CLASSES.C1.M2' | translate }}</mat-list-item>
+        <mat-list-item><mat-icon matListIcon>fiber_manual_record</mat-icon>{{ 'DATAANALYSIS.CLASSES.C1.M3' | translate }}</mat-list-item>
+      </mat-list>
     </mat-card-content>
   </mat-card>
 
-  <mat-card class="example-card" fxFlex="0 1 calc(33.3% - 16px)" fxFlex.lt-md="0 1 calc(50% - 16px)"
+  <mat-card class="example-card" fxFlex="0 1 calc(40% - 16px)" fxFlex.lt-md="0 1 calc(50% - 16px)"
             fxFlex.lt-sm="100%">
     <mat-card-header>
       <div mat-card-avatar class="example-header-image"></div>
@@ -67,21 +76,12 @@
       </mat-card-title>
     </mat-card-header>
     <mat-card-content>
-      {{ 'DATAANALYSIS.CLASSES.C2' | translate }}
-    </mat-card-content>
-  </mat-card>
-
-  <mat-card class="example-card" fxFlex="0 1 calc(33.3% - 16px)" fxFlex.lt-md="0 1 calc(50% - 16px)"
-            fxFlex.lt-sm="100%">
-    <mat-card-header>
-      <div mat-card-avatar class="example-header-image"></div>
-      <mat-card-title>
-        {{'DATAANALYSIS.CLASSES.TITLE' | translate }}
-        3
-      </mat-card-title>
-    </mat-card-header>
-    <mat-card-content>
-      {{ 'DATAANALYSIS.CLASSES.C3' | translate }}
+      <mat-list>
+        <mat-list-item><mat-icon matListIcon>fiber_manual_record</mat-icon>{{ 'DATAANALYSIS.CLASSES.C2.M1' | translate }}</mat-list-item>
+        <mat-list-item><mat-icon matListIcon>fiber_manual_record</mat-icon>{{ 'DATAANALYSIS.CLASSES.C2.M2' | translate }}</mat-list-item>
+        <mat-list-item><mat-icon matListIcon>fiber_manual_record</mat-icon>{{ 'DATAANALYSIS.CLASSES.C2.M3' | translate }}</mat-list-item>
+        <mat-list-item><mat-icon matListIcon>fiber_manual_record</mat-icon>{{ 'DATAANALYSIS.CLASSES.C2.M4' | translate }}</mat-list-item>
+      </mat-list>
     </mat-card-content>
   </mat-card>
 
