--- a/src/app/modules/sponsors/pages/sponsors/sponsors.component.html
+++ b/src/app/modules/sponsors/pages/sponsors/sponsors.component.html
@@ -43,9 +43,15 @@
                             <img src="../../../../../assets/image/content/flowics_logo-horizontal-full-color.png" height="70vmin" alt="Logo flowics"
                                  style="position: relative; top: 50%; transform: translateY(-50%); ">
                         </div>
+                    </div>
+                    <div class="row" style="margin-top: 2vmin;">
                         <div class="col-sm">
                             <img src="../../../../../assets/image/content/pan-american-energy.png" height="75vmin" alt="Logo Pan American Energy"
                                  style="position: relative; top: 50%; transform: translateY(-50%); ">
+                        </div>
+                        <div class="col-sm">
+                            <img src="../../../../../assets/image/content/innovid.png" height="35vmin" alt="Logo Innovid"
+                                 style="position: relative; top: 50%; transform: translateY(-50%);">
                         </div>
                     </div>
                 </div>
