--- a/src/app/modules/data-analysis/pages/data-analysis/data-analysis.component.html
+++ b/src/app/modules/data-analysis/pages/data-analysis/data-analysis.component.html
@@ -24,10 +24,12 @@
 
 <div>
   <div class="d-flex flex-row-reverse">
-    <button class="goback-button">
-      <a href="" class="button-text">
-        {{ 'DATAANALYSIS.ENROLLBUTTON' | translate }} </a>
-    </button>
+    <!-- Button is inside <a> tag because it allows a greater hitmark -->
+    <a href="https://forms.gle/HoKbXFNMDZGJmJtm9" target="_blank" class="button-text">
+      <button class="goback-button">
+        {{ 'DATAANALYSIS.ENROLLBUTTON' | translate }}
+      </button>
+    </a>
   </div>
 </div>
 
@@ -112,15 +114,29 @@
     <br>
 
     <div class="container">
-      <div class="row">
-        <div class="col-sm sponsors">
-          <img src="../../../../../assets/image/content/template.png" height="80vmin" alt="Logo template"
+      <div class="row" style="margin-top: 2vmin;">
+        <div class="col-sm">
+          <img src="../../../../../assets/image/content/jpmorgan.png" height="90vmin" alt="Logo JP Morgan"
                style="position: relative; top: 50%; transform: translateY(-50%);">
         </div>
-        <div class="col-sm sponsors">
-          <img src="../../../../../assets/image/content/template.png" height="80vmin" alt="Logo template"
+        <div class="col-sm">
+          <img src="../../../../../assets/image/content/axion-energy.png" height="100vmin" alt="Logo Axion Energy"
                style="position: relative; top: 50%; transform: translateY(-50%);">
         </div>
+        <div class="col-sm">
+          <img src="../../../../../assets/image/content/flowics_logo-horizontal-full-color.png" height="70vmin" alt="Logo Flowics"
+               style="position: relative; top: 50%; transform: translateY(-50%); ">
+        </div>
+        </div>
+        <div class="row" style="margin-top: 2vmin;">
+          <div class="col-sm">
+            <img src="../../../../../assets/image/content/pan-american-energy.png" height="75vmin" alt="Logo Pan American Energy"
+                 style="position: relative; top: 50%; transform: translateY(-50%); ">
+          </div>
+          <div class="col-sm">
+            <img src="../../../../../assets/image/content/innovid.png" height="35vmin" alt="Logo Innovid"
+                 style="position: relative; top: 50%; transform: translateY(-50%);">
+          </div>
       </div>
     </div>
 
