new sponsors added in ieee extreme

--- a/src/app/modules/ieeextreme/pages/ieeextreme/ieeextreme.component.html
+++ b/src/app/modules/ieeextreme/pages/ieeextreme/ieeextreme.component.html
@@ -102,21 +102,31 @@
         <br>
 
         <div class="container">
-          <div class="row">
-              <div class="col-sm sponsors">
+          <div class="row" style="margin-top: 2vmin;">
+              <div class="col-sm">
+                  <img src="../../../../../assets/image/content/jpmorgan.png" height="90vmin" alt="Logo jpmorgan"
+                       style="position: relative; top: 50%; transform: translateY(-50%);">
+              </div>
+              <div class="col-sm">
+                  <img src="../../../../../assets/image/content/axion-energy.png" height="100vmin" alt="Logo Axion Energy"
+                       style="position: relative; top: 50%; transform: translateY(-50%);">
+              </div>
+              <div class="col-sm">
+                  <img src="../../../../../assets/image/content/flowics_logo-horizontal-full-color.png" height="70vmin" alt="Logo flowics"
+                       style="position: relative; top: 50%; transform: translateY(-50%); ">
+              </div>
+          </div>
+          <div class="row" style="margin-top: 2vmin;">
+              <div class="col-sm">
+                  <img src="../../../../../assets/image/content/pan-american-energy.png" height="75vmin" alt="Logo Pan American Energy"
+                       style="position: relative; top: 50%; transform: translateY(-50%); ">
+              </div>
+              <div class="col-sm">
                   <img src="../../../../../assets/image/content/innovid.png" height="35vmin" alt="Logo Innovid"
                        style="position: relative; top: 50%; transform: translateY(-50%);">
               </div>
-              <div class="col-sm sponsors">
-                  <img src="../../../../../assets/image/content/jpmorgan.png" height="80vmin" alt="Logo JP Morgan"
-                       style="position: relative; top: 50%; transform: translateY(-50%);">
-              </div>
-              <div class="col-sm sponsors">
-                <img src="../../../../../assets/image/content/eiwa.png" height="80vmin" alt="Logo Eiwa"
-                     style="position: relative; top: 50%; transform: translateY(-50%);">
-              </div>
           </div>
-        </div>
+      </div>
 
 
       </div>
