refactoring ieeextreme sponsors

--- a/src/app/modules/ieeextreme/pages/ieeextreme/ieeextreme.component.html
+++ b/src/app/modules/ieeextreme/pages/ieeextreme/ieeextreme.component.html
@@ -70,7 +70,48 @@
         </div>
     </div>
 
-    <!-- Sponsor 2020 -->
+    <!-- Sponsors -->
+
+    <div class="bottomLine" id="sponsorship">
+      <h1>{{ 'IEEEXTREME.SPONSORSHIP.TITLE' | translate }}</h1>
+      <br>
+      <div class="sponsor">
+        <div class="row">
+  
+          <div class="container">
+            <div class="row" style="margin-top: 2vmin;">
+                <div class="col-sm">
+                    <img src="../../../../../assets/image/content/jpmorgan.png" height="90vmin" alt="Logo jpmorgan"
+                         style="position: relative; top: 50%; transform: translateY(-50%);">
+                </div>
+                <div class="col-sm">
+                    <img src="../../../../../assets/image/content/axion-energy.png" height="100vmin" alt="Logo Axion Energy"
+                         style="position: relative; top: 50%; transform: translateY(-50%);">
+                </div>
+                <div class="col-sm">
+                    <img src="../../../../../assets/image/content/flowics_logo-horizontal-full-color.png" height="70vmin" alt="Logo flowics"
+                         style="position: relative; top: 50%; transform: translateY(-50%); ">
+                </div>
+            </div>
+            <div class="row" style="margin-top: 2vmin;">
+                <div class="col-sm">
+                    <img src="../../../../../assets/image/content/pan-american-energy.png" height="75vmin" alt="Logo Pan American Energy"
+                         style="position: relative; top: 50%; transform: translateY(-50%); ">
+                </div>
+                <div class="col-sm">
+                    <img src="../../../../../assets/image/content/innovid.png" height="35vmin" alt="Logo Innovid"
+                         style="position: relative; top: 50%; transform: translateY(-50%);">
+                </div>
+            </div>
+        </div>
+  
+  
+        </div>
+      </div>
+      </div>
+
+
+    <!-- Sponsor team -->
     <div class="noLine" id="sponsorship">
       <h1>Sponsorship 2021</h1>
       <p>{{ 'IEEEXTREME.SPONSORSHIP.TEXT' | translate }}</p>
@@ -93,45 +134,7 @@
         </div>
     </div>
 
-    <!-- Sponsors -->
-    <div class="sponsor">
-      <h1 class="right">{{ 'IEEEXTREME.SPONSORSHIP.TITLE' | translate }}</h1>
-      <div class="row">
-        <h1 class="section-title">Sponsors 2020</h1>
-
-        <br>
-
-        <div class="container">
-          <div class="row" style="margin-top: 2vmin;">
-              <div class="col-sm">
-                  <img src="../../../../../assets/image/content/jpmorgan.png" height="90vmin" alt="Logo jpmorgan"
-                       style="position: relative; top: 50%; transform: translateY(-50%);">
-              </div>
-              <div class="col-sm">
-                  <img src="../../../../../assets/image/content/axion-energy.png" height="100vmin" alt="Logo Axion Energy"
-                       style="position: relative; top: 50%; transform: translateY(-50%);">
-              </div>
-              <div class="col-sm">
-                  <img src="../../../../../assets/image/content/flowics_logo-horizontal-full-color.png" height="70vmin" alt="Logo flowics"
-                       style="position: relative; top: 50%; transform: translateY(-50%); ">
-              </div>
-          </div>
-          <div class="row" style="margin-top: 2vmin;">
-              <div class="col-sm">
-                  <img src="../../../../../assets/image/content/pan-american-energy.png" height="75vmin" alt="Logo Pan American Energy"
-                       style="position: relative; top: 50%; transform: translateY(-50%); ">
-              </div>
-              <div class="col-sm">
-                  <img src="../../../../../assets/image/content/innovid.png" height="35vmin" alt="Logo Innovid"
-                       style="position: relative; top: 50%; transform: translateY(-50%);">
-              </div>
-          </div>
-      </div>
-
-
-      </div>
-
-    </div>
+    
 
 </body>
 <app-footer></app-footer>
