--- a/src/app/modules/data-analysis/pages/data-analysis/data-analysis.component.html
+++ b/src/app/modules/data-analysis/pages/data-analysis/data-analysis.component.html
@@ -61,9 +61,9 @@
     </mat-card-header>
     <mat-card-content>
       <mat-list>
-        <mat-list-item><mat-icon matListIcon>fiber_manual_record</mat-icon>{{ 'DATAANALYSIS.CLASSES.C1.M1' | translate }}</mat-list-item>
-        <mat-list-item><mat-icon matListIcon>fiber_manual_record</mat-icon>{{ 'DATAANALYSIS.CLASSES.C1.M2' | translate }}</mat-list-item>
-        <mat-list-item><mat-icon matListIcon>fiber_manual_record</mat-icon>{{ 'DATAANALYSIS.CLASSES.C1.M3' | translate }}</mat-list-item>
+        <mat-list-item><mat-icon matListIcon>check_circle_outline</mat-icon>{{ 'DATAANALYSIS.CLASSES.C1.M1' | translate }}</mat-list-item>
+        <mat-list-item><mat-icon matListIcon>check_circle_outline</mat-icon>{{ 'DATAANALYSIS.CLASSES.C1.M2' | translate }}</mat-list-item>
+        <mat-list-item><mat-icon matListIcon>check_circle_outline</mat-icon>{{ 'DATAANALYSIS.CLASSES.C1.M3' | translate }}</mat-list-item>
       </mat-list>
     </mat-card-content>
   </mat-card>
@@ -79,10 +79,10 @@
     </mat-card-header>
     <mat-card-content>
       <mat-list>
-        <mat-list-item><mat-icon matListIcon>fiber_manual_record</mat-icon>{{ 'DATAANALYSIS.CLASSES.C2.M1' | translate }}</mat-list-item>
-        <mat-list-item><mat-icon matListIcon>fiber_manual_record</mat-icon>{{ 'DATAANALYSIS.CLASSES.C2.M2' | translate }}</mat-list-item>
-        <mat-list-item><mat-icon matListIcon>fiber_manual_record</mat-icon>{{ 'DATAANALYSIS.CLASSES.C2.M3' | translate }}</mat-list-item>
-        <mat-list-item><mat-icon matListIcon>fiber_manual_record</mat-icon>{{ 'DATAANALYSIS.CLASSES.C2.M4' | translate }}</mat-list-item>
+        <mat-list-item><mat-icon matListIcon>check_circle_outline</mat-icon>{{ 'DATAANALYSIS.CLASSES.C2.M1' | translate }}</mat-list-item>
+        <mat-list-item><mat-icon matListIcon>check_circle_outline</mat-icon>{{ 'DATAANALYSIS.CLASSES.C2.M2' | translate }}</mat-list-item>
+        <mat-list-item><mat-icon matListIcon>check_circle_outline</mat-icon>{{ 'DATAANALYSIS.CLASSES.C2.M3' | translate }}</mat-list-item>
+        <mat-list-item><mat-icon matListIcon>check_circle_outline</mat-icon>{{ 'DATAANALYSIS.CLASSES.C2.M4' | translate }}</mat-list-item>
       </mat-list>
     </mat-card-content>
   </mat-card>
@@ -115,30 +115,30 @@
 
     <div class="container">
       <div class="row" style="margin-top: 2vmin;">
-        <div class="col-sm">
-          <img src="../../../../../assets/image/content/jpmorgan.png" height="90vmin" alt="Logo JP Morgan"
-               style="position: relative; top: 50%; transform: translateY(-50%);">
-        </div>
-        <div class="col-sm">
-          <img src="../../../../../assets/image/content/axion-energy.png" height="100vmin" alt="Logo Axion Energy"
-               style="position: relative; top: 50%; transform: translateY(-50%);">
-        </div>
-        <div class="col-sm">
-          <img src="../../../../../assets/image/content/flowics_logo-horizontal-full-color.png" height="70vmin" alt="Logo Flowics"
-               style="position: relative; top: 50%; transform: translateY(-50%); ">
-        </div>
-        </div>
-        <div class="row" style="margin-top: 2vmin;">
-          <div class="col-sm">
-            <img src="../../../../../assets/image/content/pan-american-energy.png" height="75vmin" alt="Logo Pan American Energy"
-                 style="position: relative; top: 50%; transform: translateY(-50%); ">
+          <div class="col-sm mt-5 mt-md-2">
+              <img src="../../../../../assets/image/content/jpmorgan.png" height="90vmin" alt="Logo jpmorgan"
+                   style="position: relative; top: 50%; transform: translateY(-50%);">
           </div>
-          <div class="col-sm">
-            <img src="../../../../../assets/image/content/innovid.png" height="35vmin" alt="Logo Innovid"
-                 style="position: relative; top: 50%; transform: translateY(-50%);">
+          <div class="col-sm mt-5 mt-md-2">
+              <img src="../../../../../assets/image/content/innovid.png" height="35vmin" alt="Logo Innovid"
+                   style="position: relative; top: 50%; transform: translateY(-50%);">
           </div>
       </div>
-    </div>
+      <div class="row">
+          <div class="col-sm mt-5 mt-md-4">
+              <img src="../../../../../assets/image/content/pan-american-energy.png" height="100vmin" alt="Logo Axion Energy"
+                   style="position: relative; top: 50%; transform: translateY(-50%);">
+          </div>
+          <div class="col-sm mt-5 mt-md-4">
+              <img src="../../../../../assets/image/content/axion-energy.png" height="100vmin" alt="Logo Axion Energy"
+                   style="position: relative; top: 50%; transform: translateY(-50%);">
+          </div>
+          <div class="col-sm mt-5 mt-md-4">
+              <img src="../../../../../assets/image/content/flowics_logo-horizontal-full-color.png" height="70vmin" alt="Logo flowics"
+                   style="position: relative; top: 50%; transform: translateY(-50%); ">
+          </div>    
+      </div>
+  </div>
 
 
   </div>
