main title translate

--- a/src/app/modules/mainpage/pages/mainpage/mainpage.component.html
+++ b/src/app/modules/mainpage/pages/mainpage/mainpage.component.html
@@ -12,7 +12,7 @@
   <div class="banner">
     <img src="../../../../../assets/image/banner6.jpg" alt="IEEE ITBA" class="max-width">
     <div class="main-title">ITBA IEEE</div>
-    <div class="subtitle">Student Branch</div>
+    <div class="subtitle">{{ 'HOME.TITLE' | translate }}</div>
   </div>
 </header>
 
