fist commit in branch

--- a/src/app/modules/team/pages/team/team.component.html
+++ b/src/app/modules/team/pages/team/team.component.html
@@ -32,6 +32,99 @@
         <mat-tab-group dynamicHeight>
 
             <!-- ************************ -->
+            <!-- *       Actual         * -->
+            <!-- ************************ -->
+
+            <mat-tab label="2022">
+                <br>
+                <mat-accordion>
+                    <!-- Photos at imgbb -->
+
+                    <!-- CD -->
+                    <mat-expansion-panel class="mat-elevation-z0">
+                        <mat-expansion-panel-header>
+                            <mat-panel-title>
+                                CD
+                            </mat-panel-title>
+                        </mat-expansion-panel-header>
+
+                        <app-team-card type="CD_2021"></app-team-card>
+
+                    </mat-expansion-panel>
+
+                    <!-- Mediacom -->
+                    <mat-expansion-panel class="mat-elevation-z0">
+                        <mat-expansion-panel-header>
+                            <mat-panel-title>
+                                Mediacom
+                            </mat-panel-title>
+                        </mat-expansion-panel-header>
+
+                        <app-team-card type="Mediacom_2021"></app-team-card>
+                        <app-team-card type="Mediacom2_2021"></app-team-card>
+                    </mat-expansion-panel>
+
+                    <!-- IT -->
+                    <mat-expansion-panel class="mat-elevation-z0">
+                        <mat-expansion-panel-header>
+                            <mat-panel-title>
+                                IT
+                            </mat-panel-title>
+                        </mat-expansion-panel-header>
+
+                        <app-team-card type="IT_2021"></app-team-card>
+
+                    </mat-expansion-panel>
+
+                    <!-- Educacion -->
+                    <mat-expansion-panel class="mat-elevation-z0">
+                        <mat-expansion-panel-header>
+                            <mat-panel-title>
+                                {{ 'HOME.CARGO.EDUCATION.TITLE' | translate }}
+                            </mat-panel-title>
+                        </mat-expansion-panel-header>
+
+                        <app-team-card type="Education_2021"></app-team-card>
+                        <app-team-card type="Education2_2021"></app-team-card>
+                    </mat-expansion-panel>
+
+                    <!-- I+D -->
+                    <mat-expansion-panel class="mat-elevation-z0">
+                        <mat-expansion-panel-header>
+                            <mat-panel-title>
+                                I+D
+                            </mat-panel-title>
+                        </mat-expansion-panel-header>
+
+                        <app-team-card type="ID_2021"></app-team-card>
+
+                    </mat-expansion-panel>
+
+                    <!-- Fundraising -->
+                    <mat-expansion-panel class="mat-elevation-z0">
+                        <mat-expansion-panel-header>
+                            <mat-panel-title>
+                                Fundraising
+                            </mat-panel-title>
+                        </mat-expansion-panel-header>
+
+                        <app-team-card type="Fundraising_2021"></app-team-card>
+                        <app-team-card type="Fundraising2_2021"></app-team-card>
+
+                    </mat-expansion-panel>
+
+
+
+
+                    <br><br>
+
+                </mat-accordion>
+
+            </mat-tab>
+
+
+
+            <!-- ************************ -->
             <!-- *       2021           * -->
             <!-- ************************ -->
 
